# libsc

./: meson.build
include/sc/: Closure.h  Exception.h  Refcnt.h  SignalDebugger.h  _Closure.h  _Refcnt.h  branch.h  cdefs.h  defer.h  errno.h  log.h  macro.h
include/sc/container/: Array.h
include/sc/object/: Trait.h  VtableEntry.h
include/sc/object/trait/: Allocator.h  Scope.h  Stream.h  Subscriptable.h
include/sc/system/: endian.h  execinfo.h  stdbit.h  threads.h  tls.h
include/sc/thread/: ThreadPool.h  nproc.h  threadname.h
include/sc/wrapper/: stdio.h  stdlib.h  threads.h
src/: Closure.c  Exception.c  Refcnt.c  SignalDebugger.c  log.c
src/container/: Array.c
src/object/: Trait.c
src/object/trait/: Allocator.c  Scope.c  Stream.c
src/system/: execinfo.c
src/thread/: ThreadPool.c  nproc.c  threadname.c
src/wrapper/: stdio.c  stdlib.c  threads.c
tools/: concat.py
